Fix scrollbar appearing during animations

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -142,6 +142,7 @@ button {
 	left: 0;
 	right: 0;
 	bottom: 0;
+	overflow: hidden;
 }
 
 .ReactModal__Overlay {
